...
    });
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: const Key('contentScaffold'),
      body: LayoutBuilder(
        builder: (context, constraints) {
          return Center(
            child: Container(
              width: constraints.maxWidth > 800 ? 800 : double.infinity,
              padding: const EdgeInsets.all(16.0),
...
